--- a/index.html
+++ b/index.html
@@ -20,28 +20,28 @@
 					<li><a href="#contato">Fale conosco</a></li>
 				</ul>
 			</nav>
-			<button class="cart-button">
+			<button>
 				<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
 			</button>
 		</header>
 		<main>
-			<div class="produtos-container">
+			<div>
 				<h2>Produtos</h2>
 				<!-- Produto 1 -->
-				<div class="produto">
-					<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa" class="produto-imagem" />
-					<div class="produto-info">
+				<div>
+					<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa" />
+					<div>
 						<h3>Camiseta Dev em Dobro</h3>
-						<p><strong>Cor:</strong> roxa</p>
-						<p><strong>Tamanho:</strong> M</p>
-						<p class="preco">R$ 89,00</p>
-						<button class="adicionar-carrinho">Adicionar ao carrinho</button>
+						<span><strong>Cor:</strong> roxa</span>
+						<span><strong>Tamanho:</strong> M</span>
+						<span>R$ 89,00</span>
+						<button>Adicionar ao carrinho</button>
 					</div>
 				</div>
 			</div>
 		</main>
 		<footer>
-			<div class="footer-section">
+			<div>
 				<h3>Institucional</h3>
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -51,7 +51,7 @@
 					<li><a href="#contato">Fale conosco</a></li>
 				</ul>
 			</div>
-			<div class="footer-section">
+			<div>
 				<h3>Ajuda</h3>
 				<ul>
 					<li><a href="#trocas">Trocas e devoluções</a></li>
@@ -60,10 +60,10 @@
 					<li><a href="#qualidade">Padrão de qualidade</a></li>
 				</ul>
 			</div>
-			<div class="footer-section">
+			<div>
 				<h3>Endereço</h3>
 				<ul>
-					<li><a href="#rua">Rua do Vale do Silício</a></li>
+					<li><a href="#endereco">Rua do Vale do Silício</a></li>
 					<li>São Franscisco</li>
 					<li>Estados Unidos</li>
 					<li><a href="#">31-123233</a></li>
@@ -87,7 +87,7 @@
 
 					<div id="modal-1-content">
 						<!-- Tabela de produtos -->
-						<table class="produtos-tabela">
+						<table>
 							<thead>
 								<tr>
 									<th>Produto</th>
@@ -100,28 +100,31 @@
 							</thead>
 							<tbody>
 								<tr>
-									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" class="produto-imagem" /></td>
+									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
 									<td>Camiseta Dev em Dobro</td>
 									<td>R$ 89,00</td>
-									<td><input type="number" value="1" min="1" class="quantidade" /></td>
-									<td><button class="deletar-produto">Deletar</button></td>
+									<td><input type="number" value="1" min="1" /></td>
+									<td><strong>R$ 89,00</strong></td>
+									<td><button>Deletar</button></td>
 								</tr>
 								<tr>
-									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" class="produto-imagem" /></td>
+									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
 									<td>Camiseta Dev em Dobro</td>
 									<td>R$ 89,00</td>
-									<td><input type="number" value="1" min="1" class="quantidade" /></td>
-									<td><button class="deletar-produto">Deletar</button></td>
+									<td><input type="number" value="1" min="1" /></td>
+									<td><strong>R$ 89,00</strong></td>
+									<td><button>Deletar</button></td>
 								</tr>
 							</tbody>
 						</table>
 
 						<!-- Resumo do pedido -->
-						<div class="resumo">
-							<h3>Resumo do pedido</h3>
-							<p>Subtotal dos pedidos: <span class="subtotal">R$ 89,00</span></p>
-							<p>Total: <span class="total">R$ 109,00</span></p>
-							<button class="finalizar-compra">Finalizar compra</button>
+						<div>
+							<div>
+								<span>Subtotal dos pedidos: <strong>R$ 89,00</strong></span>
+								<span>Total: R$ 109,00</span>
+							</div>
+							<button>Finalizar compra</button>
 						</div>
 					</div>
 				</div>
