--- a/index.html
+++ b/index.html
@@ -25,20 +25,22 @@
 			</button>
 		</header>
 		<main>
-			<div>
+			<section>
 				<h2>Produtos</h2>
 				<!-- Produto 1 -->
-				<div>
-					<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa" />
-					<div>
-						<h3>Camiseta Dev em Dobro</h3>
-						<span><strong>Cor:</strong> roxa</span>
-						<span><strong>Tamanho:</strong> M</span>
-						<span>R$ 89,00</span>
-						<button>Adicionar ao carrinho</button>
-					</div>
-				</div>
-			</div>
+				<ul>
+					<li>
+						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa" />
+						<div>
+							<h3>Camiseta Dev em Dobro</h3>
+							<span><strong>Cor:</strong> roxa</span>
+							<span><strong>Tamanho:</strong> M</span>
+							<span>R$ 89,00</span>
+							<button>Adicionar ao carrinho</button>
+						</div>
+					</li>
+				</ul>
+			</section>
 		</main>
 		<footer>
 			<div>
