--- a/index.html
+++ b/index.html
@@ -30,9 +30,11 @@
 				<!-- Produto 1 -->
 				<ul>
 					<li>
-						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro - Roxa" />
+						<figure>
+							<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa">
+							<figcaption>Camiseta Dev em Dobro</figcaption>
+						</figure>
 						<div>
-							<h3>Camiseta Dev em Dobro</h3>
 							<span><strong>Cor:</strong> roxa</span>
 							<span><strong>Tamanho:</strong> M</span>
 							<span>R$ 89,00</span>
