--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 			</nav>
 			<button>
 				<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
+				<span id="contador-carrinho">0</span>
 			</button>
 		</header>
 		<main>
@@ -29,16 +30,28 @@
 				<h2>Produtos</h2>
 				<!-- Produto 1 -->
 				<ul>
-					<li>
+					<li class="produto" data-id="camiseta-roxa">
 						<figure>
 							<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa">
-							<figcaption>Camiseta Dev em Dobro</figcaption>
+							<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
 						</figure>
 						<div>
 							<span><strong>Cor:</strong> roxa</span>
 							<span><strong>Tamanho:</strong> M</span>
-							<span>R$ 89,00</span>
-							<button>Adicionar ao carrinho</button>
+							<span class="preco">R$ 89,00</span>
+							<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
+						</div>
+					</li>
+					<li class="produto" data-id="caneca-dev">
+						<figure>
+							<img src="./assets/images/caneca_dev.svg" alt="Caneca Dev em Dobro">
+							<figcaption class="nome">Caneca Dev em Dobro</figcaption>
+						</figure>
+						<div>
+							<span><strong>Cor:</strong> branca</span>
+							<span><strong>Capacidade:</strong> 350ml</span>
+							<span class="preco">R$ 49,00</span>
+							<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
 						</div>
 					</li>
 				</ul>
@@ -103,30 +116,15 @@
 								</tr>
 							</thead>
 							<tbody>
-								<tr>
-									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
-									<td>Camiseta Dev em Dobro</td>
-									<td>R$ 89,00</td>
-									<td><input type="number" value="1" min="1" /></td>
-									<td><strong>R$ 89,00</strong></td>
-									<td><button>Deletar</button></td>
-								</tr>
-								<tr>
-									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
-									<td>Camiseta Dev em Dobro</td>
-									<td>R$ 89,00</td>
-									<td><input type="number" value="1" min="1" /></td>
-									<td><strong>R$ 89,00</strong></td>
-									<td><button>Deletar</button></td>
-								</tr>
+								
+								
 							</tbody>
 						</table>
 
 						<!-- Resumo do pedido -->
 						<div>
 							<div>
-								<span>Subtotal dos pedidos: <strong>R$ 89,00</strong></span>
-								<span>Total: R$ 109,00</span>
+								<span id="total-carrinho">Total: R$ 0,00</span>
 							</div>
 							<button>Finalizar compra</button>
 						</div>
@@ -134,5 +132,7 @@
 				</div>
 			</div>
 		</div>
+
+		<script src="./js/index.js"></script>
 	</body>
 </html>
