--- a/index.html
+++ b/index.html
@@ -116,8 +116,22 @@
 								</tr>
 							</thead>
 							<tbody>
-								
-								
+								<tr>
+									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
+									<td>Camiseta Dev em Dobro</td>
+									<td>R$ 89,00</td>
+									<td><input type="number" value="1" min="1" /></td>
+									<td><strong>R$ 89,00</strong></td>
+									<td><button id="deletar">Deletar</button></td>
+								</tr>
+								<tr>
+									<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
+									<td>Camiseta Dev em Dobro</td>
+									<td>R$ 89,00</td>
+									<td><input type="number" value="1" min="1" /></td>
+									<td><strong>R$ 89,00</strong></td>
+									<td><button>Deletar</button></td>
+								</tr>
 							</tbody>
 						</table>
 
