troca por nav no footer

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 			</section>
 		</main>
 		<footer>
-			<div>
+			<nav>
 				<h3>Institucional</h3>
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -67,8 +67,8 @@
 					<li><a href="#faq">Perguntas Frequentes</a></li>
 					<li><a href="#contato">Fale conosco</a></li>
 				</ul>
-			</div>
-			<div>
+			</nav>
+			<nav>
 				<h3>Ajuda</h3>
 				<ul>
 					<li><a href="#trocas">Trocas e devoluções</a></li>
@@ -76,8 +76,8 @@
 					<li><a href="#politica">Política de Privacidade</a></li>
 					<li><a href="#qualidade">Padrão de qualidade</a></li>
 				</ul>
-			</div>
-			<div>
+			</nav>
+			<nav>
 				<h3>Endereço</h3>
 				<ul>
 					<li><a href="#endereco">Rua do Vale do Silício</a></li>
@@ -86,7 +86,7 @@
 					<li><a href="#">31-123233</a></li>
 					<li><a href="#mail">vendas@master.com</a></li>
 				</ul>
-			</div>
+			</nav>
 		</footer>
 
 		<!-- [1] -->
