cria seção do rodape que faltou

--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 					<li><a href="#mail">vendas@master.com</a></li>
 				</ul>
 			</nav>
+			<div>
+				<p>@2024 - Todos os direitos reservados</p>
+			</div>
 		</footer>
 
 		<!-- [1] -->
