--- a/index.html
+++ b/index.html
@@ -1,41 +1,41 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<title>E-commerce Master</title>
+		<link rel="stylesheet" href="css/reset.css" />
+		<link rel="stylesheet" href="css/base.css" />
+		<link rel="stylesheet" href="css/menu.css" />
+		<link rel="stylesheet" href="css/modal.css" />
+	</head>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>E-commerce Master</title>
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/base.css" />
-	<link rel="stylesheet" href="css/menu.css" />
-	<link rel="stylesheet" href="css/modal.css">
-</head>
+	<body>
+		<header>
+			<div class="header-esquerda">
+				<button class="menu-hamburguer" aria-label="Abrir menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+				<a href="#home">
+					<img src="./assets/images/logo.svg" alt="Dev em Dobro" />
+				</a>
 
-<body>
-	<header>
-		<div class="header-esquerda">
-			<button class="menu-hamburguer" aria-label="Abrir menu">
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-			<a href="#home">
-				<img src="./assets/images/logo.svg" alt="Dev em Dobro" />
-			</a>
-
-			<nav>
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#sobre">Sobre</a></li>
-					<li><a href="#produtos">Produtos</a></li>
-					<li><a href="#faq">Perguntas Frequentes</a></li>
-					<li><a href="#contato">Fale conosco</a></li>
-				</ul>
-			</nav>
-			<button data-micromodal-trigger="modal-1">
-				<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
-				<span id="contador-carrinho">0</span>
-			</button>
+				<nav>
+					<ul>
+						<li><a href="#home">Home</a></li>
+						<li><a href="#sobre">Sobre</a></li>
+						<li><a href="#produtos">Produtos</a></li>
+						<li><a href="#faq">Perguntas Frequentes</a></li>
+						<li><a href="#contato">Fale conosco</a></li>
+					</ul>
+				</nav>
+				<button data-micromodal-trigger="modal-1">
+					<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
+					<span id="contador-carrinho">0</span>
+				</button>
+			</div>
 		</header>
 		<main>
 			<section>
@@ -44,7 +44,7 @@
 				<ul>
 					<li class="produto" data-id="camiseta-roxa">
 						<figure>
-							<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa">
+							<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa" />
 							<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
 						</figure>
 						<div>
@@ -56,7 +56,7 @@
 					</li>
 					<li class="produto" data-id="caneca-dev">
 						<figure>
-							<img src="./assets/images/caneca_dev.svg" alt="Caneca Dev em Dobro">
+							<img src="./assets/images/caneca_dev.svg" alt="Caneca Dev em Dobro" />
 							<figcaption class="nome">Caneca Dev em Dobro</figcaption>
 						</figure>
 						<div>
@@ -162,7 +162,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 
 		<script src="./js/carrinho.js"></script>
 
