--- a/index.html
+++ b/index.html
@@ -151,9 +151,9 @@
 						</table>
 
 						<!-- Resumo do pedido -->
-						<div>
+						<div class="container-preço">
 							<span id="total-carrinho">Total: R$ 0,00</span>
-							<button>Finalizar compra</button>
+							<button class="finalizar-compra">Finalizar compra</button>
 						</div>
 					</div>
 				</div>
