--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 	<link rel="stylesheet" href="css/reset.css" />
 	<link rel="stylesheet" href="css/base.css" />
-	<link rel="stylesheet" href="css/menu.css" />
+	<link rel="stylesheet" href="css/cabecalho.css" />
 	<link rel="stylesheet" href="css/produto.css">
 	<link rel="stylesheet" href="css/rodape.css">
 	<!-- <link rel="stylesheet" href="css/modal.css" /> -->
@@ -22,17 +22,18 @@
 </head>
 
 <body>
-	<header>
-		<div class="header-esquerda">
-			<button class="menu-hamburguer" aria-label="Abrir menu">
-				<span></span>
-				<span></span>
-				<span></span>
-			</button>
-			<a href="#home">
-				<img src="./assets/images/logo.svg" alt="Dev em Dobro" />
-			</a>
-
+	<header class="cabecalho">
+		<div class="header-conteudo">
+			<div class="header-esquerda">
+				<button class="menu-hamburguer" aria-label="Abrir menu">
+					<span></span>
+					<span></span>
+					<span></span>
+				</button>
+				<a class="logo" href="#home">
+					<img src="./assets/images/logo.svg" alt="Dev em Dobro" />
+				</a>
+			</div>
 			<nav>
 				<ul>
 					<li><a href="#home">Home</a></li>
@@ -42,7 +43,7 @@
 					<li><a href="#contato">Fale conosco</a></li>
 				</ul>
 			</nav>
-			<button data-micromodal-trigger="modal-1">
+			<button class="botao-carrinho" data-micromodal-trigger="modal-1">
 				<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
 				<span id="contador-carrinho">0</span>
 			</button>
