--- a/index.html
+++ b/index.html
@@ -1,217 +1,257 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>E-commerce Master</title>
 
-<head>
-	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>E-commerce Master</title>
+    <link rel="stylesheet" href="css/reset.css" />
+    <link rel="stylesheet" href="css/base.css" />
+    <link rel="stylesheet" href="css/cabecalho.css" />
+    <link rel="stylesheet" href="css/produtos.css" />
+    <link rel="stylesheet" href="css/rodape.css" />
+    <!-- <link rel="stylesheet" href="css/modal.css" /> -->
+    <link rel="stylesheet" href="css/carrinho.css" />
+    <link rel="stylesheet" href="css/responsivo.css" />
 
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/base.css" />
-	<link rel="stylesheet" href="css/cabecalho.css" />
-	<link rel="stylesheet" href="css/produto.css">
-	<link rel="stylesheet" href="css/rodape.css">
-	<!-- <link rel="stylesheet" href="css/modal.css" /> -->
-	<link rel="stylesheet" href="css/carrinho.css">
-	<link rel="stylesheet" href="css/responsivo.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+  </head>
 
-	<link rel="preconnect" href="https://fonts.googleapis.com">
-	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-	<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
-		rel="stylesheet">
-</head>
+  <body>
+    <header class="cabecalho">
+      <div class="header-conteudo">
+        <div class="header-esquerda">
+          <button class="menu-hamburguer" aria-label="Abrir menu">
+            <span></span>
+            <span></span>
+            <span></span>
+          </button>
+          <a class="logo" href="#home">
+            <img src="./assets/images/logo.svg" alt="Dev em Dobro" />
+          </a>
+        </div>
+        <nav>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="#faq">Perguntas Frequentes</a></li>
+            <li><a href="#contato">Fale conosco</a></li>
+          </ul>
+        </nav>
+        <button class="botao-carrinho" data-micromodal-trigger="modal-1">
+          <img
+            src="./assets/images/icone_carrinho.svg"
+            alt="Carrinho de Compras"
+          />
+          <span id="contador-carrinho">0</span>
+        </button>
+      </div>
+    </header>
+    <main>
+      <section>
+        <h2>Produtos</h2>
+        <!-- Produto 1 -->
+        <ul>
+          <li class="produto" data-id="camiseta-roxa">
+            <figure>
+              <img
+                src="./assets/images/camiseta_roxa.jpg"
+                alt="Camiseta Dev em Dobro – Roxa"
+              />
+              <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
+            </figure>
+            <div>
+              <span><strong>Cor:</strong> roxa</span>
+              <span><strong>Tamanho:</strong> M</span>
+              <span class="preco">R$ 89,00</span>
+              <button class="adicionar-ao-carrinho">
+                Adicionar ao carrinho
+              </button>
+            </div>
+          </li>
+          <li class="produto" data-id="camiseta-roxa">
+            <figure>
+              <img
+                src="./assets/images/camiseta_roxa.jpg"
+                alt="Camiseta Dev em Dobro – Roxa"
+              />
+              <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
+            </figure>
+            <div>
+              <span><strong>Cor:</strong> roxa</span>
+              <span><strong>Tamanho:</strong> M</span>
+              <span class="preco">R$ 89,00</span>
+              <button class="adicionar-ao-carrinho">
+                Adicionar ao carrinho
+              </button>
+            </div>
+          </li>
+          <li class="produto" data-id="camiseta-roxa">
+            <figure>
+              <img
+                src="./assets/images/camiseta_roxa.jpg"
+                alt="Camiseta Dev em Dobro – Roxa"
+              />
+              <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
+            </figure>
+            <div>
+              <span><strong>Cor:</strong> roxa</span>
+              <span><strong>Tamanho:</strong> M</span>
+              <span class="preco">R$ 89,00</span>
+              <button class="adicionar-ao-carrinho">
+                Adicionar ao carrinho
+              </button>
+            </div>
+          </li>
+          <li class="produto" data-id="camiseta-roxa">
+            <figure>
+              <img
+                src="./assets/images/camiseta_roxa.jpg"
+                alt="Camiseta Dev em Dobro – Roxa"
+              />
+              <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
+            </figure>
+            <div>
+              <span><strong>Cor:</strong> roxa</span>
+              <span><strong>Tamanho:</strong> M</span>
+              <span class="preco">R$ 89,00</span>
+              <button class="adicionar-ao-carrinho">
+                Adicionar ao carrinho
+              </button>
+            </div>
+          </li>
+          <li class="produto" data-id="caneca-dev">
+            <figure>
+              <img
+                src="./assets/images/caneca_dev.svg"
+                alt="Caneca Dev em Dobro"
+              />
+              <figcaption class="nome">Caneca Dev em Dobro</figcaption>
+            </figure>
+            <div>
+              <span><strong>Cor:</strong> branca</span>
+              <span><strong>Capacidade:</strong> 350ml</span>
+              <span class="preco">R$ 49,00</span>
+              <button class="adicionar-ao-carrinho">
+                Adicionar ao carrinho
+              </button>
+            </div>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <div class="container">
+        <nav>
+          <h3>Institucional</h3>
+          <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#sobre">Sobre</a></li>
+            <li><a href="#produtos">Produtos</a></li>
+            <li><a href="#faq">Perguntas Frequentes</a></li>
+            <li><a href="#contato">Fale conosco</a></li>
+          </ul>
+        </nav>
+        <nav>
+          <h3>Ajuda</h3>
+          <ul>
+            <li><a href="#trocas">Trocas e devoluções</a></li>
+            <li><a href="#termos">Termos e condições</a></li>
+            <li><a href="#politica">Política de Privacidade</a></li>
+            <li><a href="#qualidade">Padrão de qualidade</a></li>
+          </ul>
+        </nav>
+        <nav>
+          <h3>Endereço</h3>
+          <ul>
+            <li><a href="#endereco">Rua do Vale do Silício</a></li>
+            <li>São Franscisco</li>
+            <li>Estados Unidos</li>
+            <li><a href="#">31-123233</a></li>
+            <li><a href="#mail">vendas@master.com</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="copyright">
+        <p>@2024 - Todos os direitos reservados</p>
+      </div>
+    </footer>
 
-<body>
-	<header class="cabecalho">
-		<div class="header-conteudo">
-			<div class="header-esquerda">
-				<button class="menu-hamburguer" aria-label="Abrir menu">
-					<span></span>
-					<span></span>
-					<span></span>
-				</button>
-				<a class="logo" href="#home">
-					<img src="./assets/images/logo.svg" alt="Dev em Dobro" />
-				</a>
-			</div>
-			<nav>
-				<ul>
-					<li><a href="#home">Home</a></li>
-					<li><a href="#sobre">Sobre</a></li>
-					<li><a href="#produtos">Produtos</a></li>
-					<li><a href="#faq">Perguntas Frequentes</a></li>
-					<li><a href="#contato">Fale conosco</a></li>
-				</ul>
-			</nav>
-			<button class="botao-carrinho" data-micromodal-trigger="modal-1">
-				<img src="./assets/images/icone_carrinho.svg" alt="Carrinho de Compras" />
-				<span id="contador-carrinho">0</span>
-			</button>
-		</div>
-	</header>
-	<main>
-		<section>
-			<h2>Produtos</h2>
-			<!-- Produto 1 -->
-			<ul>
-				<li class="produto" data-id="camiseta-roxa">
-					<figure>
-						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa" />
-						<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
-					</figure>
-					<div>
-						<span><strong>Cor:</strong> roxa</span>
-						<span><strong>Tamanho:</strong> M</span>
-						<span class="preco">R$ 89,00</span>
-						<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
-					</div>
-				</li>
-				<li class="produto" data-id="camiseta-roxa">
-					<figure>
-						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa" />
-						<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
-					</figure>
-					<div>
-						<span><strong>Cor:</strong> roxa</span>
-						<span><strong>Tamanho:</strong> M</span>
-						<span class="preco">R$ 89,00</span>
-						<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
-					</div>
-				</li>
-				<li class="produto" data-id="camiseta-roxa">
-					<figure>
-						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa" />
-						<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
-					</figure>
-					<div>
-						<span><strong>Cor:</strong> roxa</span>
-						<span><strong>Tamanho:</strong> M</span>
-						<span class="preco">R$ 89,00</span>
-						<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
-					</div>
-				</li>
-				<li class="produto" data-id="camiseta-roxa">
-					<figure>
-						<img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro – Roxa" />
-						<figcaption class="nome">Camiseta Dev em Dobro</figcaption>
-					</figure>
-					<div>
-						<span><strong>Cor:</strong> roxa</span>
-						<span><strong>Tamanho:</strong> M</span>
-						<span class="preco">R$ 89,00</span>
-						<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
-					</div>
-				</li>
-				<li class="produto" data-id="caneca-dev">
-					<figure>
-						<img src="./assets/images/caneca_dev.svg" alt="Caneca Dev em Dobro" />
-						<figcaption class="nome">Caneca Dev em Dobro</figcaption>
-					</figure>
-					<div>
-						<span><strong>Cor:</strong> branca</span>
-						<span><strong>Capacidade:</strong> 350ml</span>
-						<span class="preco">R$ 49,00</span>
-						<button class="adicionar-ao-carrinho">Adicionar ao carrinho</button>
-					</div>
-				</li>
-			</ul>
-		</section>
-	</main>
-	<footer>
-		<nav>
-			<h3>Institucional</h3>
-			<ul>
-				<li><a href="#home">Home</a></li>
-				<li><a href="#sobre">Sobre</a></li>
-				<li><a href="#produtos">Produtos</a></li>
-				<li><a href="#faq">Perguntas Frequentes</a></li>
-				<li><a href="#contato">Fale conosco</a></li>
-			</ul>
-		</nav>
-		<nav>
-			<h3>Ajuda</h3>
-			<ul>
-				<li><a href="#trocas">Trocas e devoluções</a></li>
-				<li><a href="#termos">Termos e condições</a></li>
-				<li><a href="#politica">Política de Privacidade</a></li>
-				<li><a href="#qualidade">Padrão de qualidade</a></li>
-			</ul>
-		</nav>
-		<nav>
-			<h3>Endereço</h3>
-			<ul>
-				<li><a href="#endereco">Rua do Vale do Silício</a></li>
-				<li>São Franscisco</li>
-				<li>Estados Unidos</li>
-				<li><a href="#">31-123233</a></li>
-				<li><a href="#mail">vendas@master.com</a></li>
-			</ul>
-		</nav>
-		<div class="copyright">
-			<p>@2024 - Todos os direitos reservados</p>
-		</div>
-	</footer>
+    <!-- [1] -->
+    <div class="modal" id="modal-1" aria-hidden="true">
+      <!-- [2] -->
+      <div tabindex="-1" data-micromodal-close>
+        <!-- [3] -->
+        <div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
+          <header>
+            <h2 id="modal-1-title">Carrinho de compras</h2>
 
-	<!-- [1] -->
-	<div class="modal" id="modal-1" aria-hidden="true">
-		<!-- [2] -->
-		<div tabindex="-1" data-micromodal-close>
-			<!-- [3] -->
-			<div role="dialog" aria-modal="true" aria-labelledby="modal-1-title">
-				<header>
-					<h2 id="modal-1-title">Carrinho de compras</h2>
+            <!-- [4] -->
+            <button aria-label="Close modal" data-micromodal-close></button>
+          </header>
 
-					<!-- [4] -->
-					<button aria-label="Close modal" data-micromodal-close></button>
-				</header>
+          <div id="modal-1-content">
+            <!-- Tabela de produtos -->
+            <table>
+              <thead>
+                <tr>
+                  <th>Produto</th>
+                  <th>Descrição</th>
+                  <th>Preço</th>
+                  <th>Quantidade</th>
+                  <th>Total</th>
+                  <th>Remover</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td>
+                    <img
+                      src="./assets/images/camiseta_roxa.jpg"
+                      alt="Camiseta Dev em Dobro"
+                    />
+                  </td>
+                  <td>Camiseta Dev em Dobro</td>
+                  <td>R$ 89,00</td>
+                  <td><input type="number" value="1" min="1" /></td>
+                  <td><strong>R$ 89,00</strong></td>
+                  <td><button id="deletar">Deletar</button></td>
+                </tr>
+                <tr>
+                  <td>
+                    <img
+                      src="./assets/images/camiseta_roxa.jpg"
+                      alt="Camiseta Dev em Dobro"
+                    />
+                  </td>
+                  <td>Camiseta Dev em Dobro</td>
+                  <td>R$ 89,00</td>
+                  <td><input type="number" value="1" min="1" /></td>
+                  <td><strong>R$ 89,00</strong></td>
+                  <td><button>Deletar</button></td>
+                </tr>
+              </tbody>
+            </table>
 
-				<div id="modal-1-content">
-					<!-- Tabela de produtos -->
-					<table>
-						<thead>
-							<tr>
-								<th>Produto</th>
-								<th>Descrição</th>
-								<th>Preço</th>
-								<th>Quantidade</th>
-								<th>Total</th>
-								<th>Remover</th>
-							</tr>
-						</thead>
-						<tbody>
-							<tr>
-								<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
-								<td>Camiseta Dev em Dobro</td>
-								<td>R$ 89,00</td>
-								<td><input type="number" value="1" min="1" /></td>
-								<td><strong>R$ 89,00</strong></td>
-								<td><button id="deletar">Deletar</button></td>
-							</tr>
-							<tr>
-								<td><img src="./assets/images/camiseta_roxa.jpg" alt="Camiseta Dev em Dobro" /></td>
-								<td>Camiseta Dev em Dobro</td>
-								<td>R$ 89,00</td>
-								<td><input type="number" value="1" min="1" /></td>
-								<td><strong>R$ 89,00</strong></td>
-								<td><button>Deletar</button></td>
-							</tr>
-						</tbody>
-					</table>
+            <!-- Resumo do pedido -->
+            <div class="container-preço">
+              <span id="total-carrinho">Total: R$ 0,00</span>
+              <button class="finalizar-compra">Finalizar compra</button>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
 
-					<!-- Resumo do pedido -->
-					<div class="container-preço">
-						<span id="total-carrinho">Total: R$ 0,00</span>
-						<button class="finalizar-compra">Finalizar compra</button>
-					</div>
-				</div>
-			</div>
-		</div>
-	</div>
+    <script src="./js/carrinho.js"></script>
 
-	<script src="./js/carrinho.js"></script>
-
-	<script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
-	<script src="./js/modal.js"></script>
-</body>
-
+    <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
+    <script src="./js/modal.js"></script>
+  </body>
 </html>
