adicionada classe do menu principal

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <img src="./assets/images/logo.svg" alt="Dev em Dobro" />
           </a>
         </div>
-        <nav>
+        <nav class="menu-principal">
           <ul>
             <li><a href="#home">Home</a></li>
             <li><a href="#sobre">Sobre</a></li>
