--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               />
               <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
             </figure>
-            <div>
+            <div class="informacoes">
               <span><strong>Cor:</strong> roxa</span>
               <span><strong>Tamanho:</strong> M</span>
               <span class="preco">R$ 89,00</span>
@@ -83,7 +83,7 @@
               />
               <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
             </figure>
-            <div>
+            <div class="informacoes">
               <span><strong>Cor:</strong> roxa</span>
               <span><strong>Tamanho:</strong> M</span>
               <span class="preco">R$ 89,00</span>
@@ -100,7 +100,7 @@
               />
               <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
             </figure>
-            <div>
+            <div class="informacoes">
               <span><strong>Cor:</strong> roxa</span>
               <span><strong>Tamanho:</strong> M</span>
               <span class="preco">R$ 89,00</span>
@@ -117,7 +117,7 @@
               />
               <figcaption class="nome">Camiseta Dev em Dobro</figcaption>
             </figure>
-            <div>
+            <div class="informacoes">
               <span><strong>Cor:</strong> roxa</span>
               <span><strong>Tamanho:</strong> M</span>
               <span class="preco">R$ 89,00</span>
@@ -134,7 +134,7 @@
               />
               <figcaption class="nome">Caneca Dev em Dobro</figcaption>
             </figure>
-            <div>
+            <div class="informacoes">
               <span><strong>Cor:</strong> branca</span>
               <span><strong>Capacidade:</strong> 350ml</span>
               <span class="preco">R$ 49,00</span>
