--- a/index.html
+++ b/index.html
@@ -250,6 +250,7 @@
     </div>
 
     <script src="./js/carrinho.js"></script>
+    <script src="./js/menu.js"></script>
 
     <script src="https://unpkg.com/micromodal/dist/micromodal.min.js"></script>
     <script src="./js/modal.js"></script>
